# discord-ext-songbird

./: .bashrc  .env  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test.sh
.github/workflows/: CI.yml  docs.yml  image.yml  release-n.yml  release.yml  test.yml
dextbird/: __init__.py  core.pyi  plug.py  voice_client.py
examples/: basic.py
images/: Dockerfile
src/: core.rs  driver.rs  lib.rs  plug.rs  track.rs  update_voice_state.rs
tests/: test_simple.py
