[tool.poetry]
name = "dextbird"
version = "v0.1.0"
description = "dextbird poetry description"
authors = ["tuna2134"]

[tool.poetry.dependencies]
python = ">=3.8"
yt-dlp = "^2024.4.9"
pytest = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
discord-py = "^2.3.2"
maturin = {extras = ["patchelf"], version = "^1.5.1"}
black = "^24.4.2"
pyright = "^1.1.363"
pdoc3 = "^0.11.0"
jishaku = "^2.5.2"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "dextbird"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
